--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.resolver.jar=C:\\pkg-src\\xerces-2_11_0-xml-schema-1.1-beta\\resolver.jar
-file.reference.xml-apis.jar=C:\\pkg-src\\xerces-2_11_0-xml-schema-1.1-beta\\xml-apis.jar
+file.reference.javacsv.jar-1=C:\\workspace\\javacsv\\javacsv.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\FITHIS\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\orbit\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
