Fixed a bug and convolution is rebased to model runs. More refactorings are expected

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,17 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.javacsv.jar-1=C:\\workspace\\javacsv\\javacsv.jar
+file.reference.cupv10k-runtime.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/cupv10k-runtime.jar
+file.reference.flanagan.jar=/home/vasileios/Dropbox/work/javadeps/flanagan.jar
+file.reference.icu4j.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/icu4j.jar
+file.reference.javacsv.jar=/home/vasileios/Dropbox/work/javadeps/javacsv/javacsv.jar
+file.reference.javacsv.jar-1=C:\\Users\\user1\\Downloads\\javacsv2.1\\javacsv.jar
+file.reference.org.eclipse.wst.xml.xpath2.processor_1.1.0.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/org.eclipse.wst.xml.xpath2.processor_1.1.0.jar
+file.reference.resolver.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/resolver.jar
+file.reference.serializer.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/serializer.jar
+file.reference.xercesImpl.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/xercesImpl.jar
+file.reference.xercesSamples.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/xercesSamples.jar
+file.reference.xml-apis.jar=/home/vasileios/Dropbox/work/javadeps/xerces-2_11_0-xml-schema-1.1-beta/xml-apis.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\orbit\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/home/vasileios/.netbeans/8.2/build.properties
