--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,24 +29,27 @@ dist.jar=${dist.dir}/DietSimsphere.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.cupv10k-runtime.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\cupv10k-runtime.jar
-file.reference.icu4j.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\icu4j.jar
+file.reference.cupv10k-runtime.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\cupv10k-runtime.jar
+file.reference.flanagan.jar=C:\\langs\\jecosystem\\flanagan.jar
+file.reference.icu4j.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\icu4j.jar
+file.reference.javacsv.jar=C:\\langs\\jecosystem\\javacsv.jar
 file.reference.javacsv.jar-1=C:\\workspace\\aberystwyth-projects\\lib\\javacsv.jar
-file.reference.org.eclipse.wst.xml.xpath2.processor_1.1.0.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\org.eclipse.wst.xml.xpath2.processor_1.1.0.jar
-file.reference.resolver.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\resolver.jar
-file.reference.serializer.jar-1=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\serializer.jar
-file.reference.xercesImpl.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\xercesImpl.jar
-file.reference.xercesSamples.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\xercesSamples.jar
-file.reference.xml-apis.jar=C:\\workspace\\xerces-2_11_0-xml-schema-1.1-beta\\xml-apis.jar
+file.reference.org.eclipse.wst.xml.xpath2.processor_1.1.0.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\org.eclipse.wst.xml.xpath2.processor_1.1.0.jar
+file.reference.resolver.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\resolver.jar
+file.reference.serializer.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\serializer.jar
+file.reference.xercesImpl.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\xercesImpl.jar
+file.reference.xercesSamples.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\xercesSamples.jar
+file.reference.xml-apis.jar=C:\\langs\\jecosystem\\xerces-2_11_0-xml-schema-1.1-beta\\xml-apis.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javacsv.jar-1}:\
+    ${file.reference.flanagan.jar}:\
+    ${file.reference.javacsv.jar}:\
     ${file.reference.cupv10k-runtime.jar}:\
     ${file.reference.icu4j.jar}:\
     ${file.reference.org.eclipse.wst.xml.xpath2.processor_1.1.0.jar}:\
     ${file.reference.resolver.jar}:\
-    ${file.reference.serializer.jar-1}:\
+    ${file.reference.serializer.jar}:\
     ${file.reference.xercesImpl.jar}:\
     ${file.reference.xercesSamples.jar}:\
     ${file.reference.xml-apis.jar}
